<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/m2f"
    android:orientation="vertical" >

    <Button
        android:id="@+id/DetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/DetailsBtnS" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/DetailsButton"
        android:layout_alignParentLeft="true"
        android:text="@string/Title_mainS"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ScaleButton"
        android:text="@string/CGTextViewS"
        android:textColorHint="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/CGedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@android:color/black"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/CGspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/CGedit"
        android:layout_alignTop="@+id/CGedit"
        android:layout_toRightOf="@+id/textView2"
        android:entries="@array/percentOrLetter"
        android:prompt="@string/spinnerChoice" />

    <EditText
        android:id="@+id/newfinalcoef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/black"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newfinalcoef"
        android:layout_alignLeft="@+id/CGspinner"
        android:text="@string/percentSigneS"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newfinalcoef"
        android:layout_marginTop="35dp"
        android:text="@string/DGTextViewS"
        android:textColorHint="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/DGedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@android:color/black"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/FCspinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/DGedit"
        android:layout_alignTop="@+id/DGedit"
        android:layout_toRightOf="@+id/textView2"
        android:entries="@array/percentOrLetter"
        android:prompt="@string/spinnerChoice" />

    <Button
        android:id="@+id/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/CalcBtnS"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/CGedit"
        android:layout_marginTop="30dp"
        android:text="@string/FCTextViewS"
        android:textColorHint="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/ScaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DetailsButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/DetailsButton"
        android:layout_marginTop="16dp"
        android:text="@string/ScaleBtnS" />

</RelativeLayout>